--- a/package.json
+++ b/package.json
@@ -6,33 +6,33 @@
     "flow": "flow"
   },
   "dependencies": {
-    "autoprefixer": "8.2.0",
     "gsap": "1.20.4",
     "immutable": "3.8.2",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
     "react-redux": "5.0.7",
-    "redux": "3.7.2",
+    "redux": "4.0.0",
     "redux-saga": "0.16.0",
-    "superagent": "3.8.2"
+    "superagent": "3.8.3"
   },
   "devDependencies": {
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.4",
     "babel-plugin-transform-flow-strip-types": "6.22.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-flow": "6.23.0",
     "babel-preset-react": "6.24.1",
-    "css-loader": "0.28.9",
-    "extract-text-webpack-plugin": "3.0.2",
-    "flow-bin": "0.66.0",
+    "css-loader": "0.28.11",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "flow-bin": "0.71.0",
     "flowtype": "2.0.0",
-    "node-sass": "4.7.2",
-    "postcss-easy-import": "3.0.0",
-    "sass-loader": "6.0.6",
-    "style-loader": "0.20.2",
-    "webpack": "3.11.0",
-    "webpack-dev-server": "2.11.1"
+    "node-sass": "4.9.0",
+    "postcss-loader": "2.1.5",
+    "sass-loader": "7.0.1",
+    "style-loader": "0.21.0",
+    "webpack": "4.7.0",
+    "webpack-cli": "2.1.2",
+    "webpack-dev-server": "3.1.4"
   }
 }
