--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "superagent": "3.8.3"
   },
   "devDependencies": {
+    "autoprefixer": "8.6.5",
     "babel-core": "6.26.3",
     "babel-loader": "7.1.4",
     "babel-plugin-transform-flow-strip-types": "6.22.0",
